--- a/Client/Dt.App/Home/MyMain.xaml
+++ b/Client/Dt.App/Home/MyMain.xaml
@@ -21,6 +21,8 @@
             </Grid>
         </a:CLink>
         <a:CBar />
+        <a:CLink Title="我的二维码" />
+        <a:CLink Title="修改密码" />
         <a:CLink Title="存储空间" />
         <a:CLink Title="关于" />
         <a:CBar>
