--- a/Client/Dt.App/Model/User/EditUserDlg.xaml
+++ b/Client/Dt.App/Model/User/EditUserDlg.xaml
@@ -8,14 +8,30 @@
     <a:Dlg.Menu>
         <a:Menu>
             <a:Mi ID="保存" Icon="保存" ShowInPhone="Icon" IsEnabled="{Binding IsDirty,ElementName=_fv}" Click="OnSave" />
-            <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAdd" />
+            <a:Mi x:Name="_miAdd" ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAdd" />
         </a:Menu>
     </a:Dlg.Menu>
 
     <a:Fv x:Name="_fv">
+        <a:CLink Click="OnChangePhoto" RowSpan="2">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="头像" VerticalAlignment="Center" />
+                <Image x:Name="_img" Width="50" Height="50" Grid.Column="2" />
+            </Grid>
+        </a:CLink>
         <a:CText ID="name" Title="姓名" />
         <a:CText ID="phone" Title="手机号" />
-        <a:CBool ID="sex" Title="性别男" />
+        <a:CList ID="sexname" Title="性别" SrcID="id" TgtID="sex">
+            <a:CList.Items>
+                <a:IDStr ID="1" Str="男" />
+                <a:IDStr ID="0" Str="女" />
+            </a:CList.Items>
+        </a:CList>
         <a:CDate ID="ctime" Title="创建时间" IsReadOnly="True" />
         <a:CDate ID="mtime" Title="修改时间" IsReadOnly="True" />
     </a:Fv>
