--- a/Client/Dt.Sample/FormView/SelectionCellDemo.xaml
+++ b/Client/Dt.Sample/FormView/SelectionCellDemo.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Win
-    x:Class="Dt.Sample.CellsDemo"
+    x:Class="Dt.Sample.SelectionCellDemo"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
@@ -8,35 +8,7 @@
     <a:WinCenter>
         <a:Tabs>
             <a:Tab Title="格">
-                <a:Fv x:Name="_fv" Changed="OnChanged">
-                    <a:CBar Title="基本格" />
-                    <a:CText ID="txt" Title="文本框" />
-                    <a:CText ID="txtlong" Title="长文本" AcceptsReturn="True" RowSpan="2" UpdateTimely="False" />
-                    <a:CText ID="txtpy" Title="拼音码" UpdateTimely="False" />
-                    <a:CNum ID="num" Title="数值" />
-                    <a:CMask ID="mask" Title="掩码" />
-                    <a:CPassword ID="pwd" Title="密码" />
-
-                    <a:CBar Title="日期格" />
-                    <a:CDate ID="date" Title="日期"/>
-                    <a:CDate ID="time" Title="时间" Format="HH:mm:ss"/>
-                    <a:CDate ID="datetime" Title="日期时间" Format="yyyy-MM-dd HH:mm:ss" />
-                    <a:CDate ID="datestr" Title="日期串" />
-                    <a:CDate ID="datetouch" Title="触摸模式日期" Format="yyyy-MM-dd HH:mm:ss" AlwaysTouchPicker="True" />
-                    
-                    <a:CBar Title="布尔格" />
-                    <a:CBool ID="check" Title="bool选择框" />
-                    <a:CBool ID="checkint" Title="整数选择框">
-                        <a:CBool.TrueVal>
-                            <x:Int32>1</x:Int32>
-                        </a:CBool.TrueVal>
-                        <a:CBool.FalseVal>
-                            <x:Int32>0</x:Int32>
-                        </a:CBool.FalseVal>
-                    </a:CBool>
-                    <a:CBool ID="checkstr" Title="字符串选择框" TrueVal="男" FalseVal="女" />
-                    <a:CBool ID="checkswitch" Title="开关" IsSwitch="True" />
-
+                <a:Fv x:Name="_fv">
                     <a:CBar Title="列表格" />
                     <a:CList ID="liststr" Title="字符串列表">
                         <a:CList.Items>
@@ -66,11 +38,11 @@
                                 </Grid.ColumnDefinitions>
                                 <Border Background="{StaticResource 主题蓝色}" Height="50" Width="50" VerticalAlignment="Center">
                                     <TextBlock Text="&#xE03C;"
-                                                   FontFamily="{StaticResource IconFont}"
-                                                   FontSize="30"
-                                                   Foreground="White"
-                                                   VerticalAlignment="Center"
-                                                   TextAlignment="Center" />
+                                               FontFamily="{StaticResource IconFont}"
+                                               FontSize="30"
+                                               Foreground="White"
+                                               VerticalAlignment="Center"
+                                               TextAlignment="Center" />
                                 </Border>
                                 <StackPanel Margin="10,0,0,0" VerticalAlignment="Center" Grid.Column="1">
                                     <a:Dot ID="xm" />
@@ -86,9 +58,6 @@
                         </a:CList.Items>
                     </a:CList>
                     <a:CList ID="listrow" Title="模拟IDString" SrcID="id" TgtID="listrowid" LoadData="OnLoadDataTable" AfterSelect="OnSelectedRow" />
-
-                    <a:CBar Title="图像格" />
-                    <a:CImage ID="img1" Title="图像" />
                     
                     <a:CBar Title="树形格" />
                     <a:CTree ID="tree" Title="普通树" LoadData="OnLoadTreeData" />
@@ -102,19 +71,6 @@
                     <a:CColor ID="color" Title="颜色"/>
                     <a:CColor ID="colorstr" Title="颜色字符串"/>
                     <a:CColor ID="colorbrush" Title="颜色画刷"/>
-
-                    <a:CBar Title="链接格" />
-                    <a:CLink Title="默认链接格" />
-                    <a:CLink RowSpan="2" IsHorStretch="False">
-                        <StackPanel Orientation="Horizontal">
-                            <Image Source="ms-appx:///Assets/logo.png" Width="50" Height="50" Margin="0,0,20,0" Stretch="Uniform" />
-                            <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-                                <TextBlock Text="李世杰" Foreground="Black" FontSize="20" />
-                                <TextBlock Text="1870****504" Foreground="{StaticResource 深灰边框}" />
-                            </StackPanel>
-                        </StackPanel>
-                    </a:CLink>
-                    <a:CLink x:Name="_link" Title="切换内容" IsHorStretch="False" Click="OnToggleLink" />
                 </a:Fv>
             </a:Tab>
         </a:Tabs>
@@ -128,18 +84,7 @@
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
                     <a:Fv x:Name="_pbFv">
-                        <a:CBar Title="表单" />
-                        <StackPanel Orientation="Horizontal">
-                            <Button Content="Row" Click="OnRow" />
-                            <Button Content="普通对象" Click="OnObj" />
-                            <Button Content="空数据源" Click="OnNull" />
-                        </StackPanel>
                         <a:CBool Title="表单只读" ID="IsReadOnly" />
-                        <a:CBar Title="警告或提示信息" />
-                        <StackPanel Orientation="Horizontal">
-                            <Button Content="警告信息" Click="OnWarn" />
-                            <Button Content="提示信息" Click="OnMsg" />
-                        </StackPanel>
                         <a:CBar Title="单元格" />
                     </a:Fv>
                     <a:Fv x:Name="_pbCell" Grid.Row="1" />
