--- a/Client/Dt.Base/Themes/Styles/FileList.xaml
+++ b/Client/Dt.Base/Themes/Styles/FileList.xaml
@@ -22,18 +22,23 @@
         </Setter>
     </Style>
 
+    <!--FileItem-->
+    <Style TargetType="a:FileItem">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Template" Value="{StaticResource VirFileTemplate}" />
+    </Style>
+
     <!--FileItem注释-->
     <Style x:Key="VirFileNoteStyle" TargetType="TextBlock">
         <Setter Property="FontSize" Value="{StaticResource 小字号}"/>
         <Setter Property="Foreground" Value="{StaticResource 深灰边框}"/>
-        <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
-        <Setter Property="TextWrapping" Value="NoWrap"/>
     </Style>
 
     <!--FileItem默认模板-->
     <ControlTemplate x:Key="VirFileTemplate" TargetType="a:FileItem">
-        <Grid x:Name="RootGrid" Background="{TemplateBinding Background}">
-            <Grid x:Name="ContentGrid" Padding="{TemplateBinding Padding}">
+        <!--Fv中两行高度-->
+        <Grid x:Name="RootGrid" Background="{TemplateBinding Background}" MinHeight="82">
+            <Grid Padding="10,0,10,0" Margin="{Binding Owner.ItemPadding, RelativeSource={RelativeSource TemplatedParent}}" VerticalAlignment="Center">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
@@ -57,8 +62,8 @@
                 <TextBlock x:Name="NoteBlock" Text="点击可取消" Foreground="White" FontSize="{StaticResource 小字号}" Margin="0,0,0,6" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
             </Grid>
             <!--分隔线-->
-            <Border BorderBrush="{StaticResource 浅灰边框}" BorderThickness="0,0,0,1" IsHitTestVisible="False" />
-            
+            <Border BorderBrush="{StaticResource 浅灰边框}" BorderThickness="0,0,0,1" Margin="0,0,0,-1" IsHitTestVisible="False" />
+
             <VisualStateManager.VisualStateGroups>
                 <VisualStateGroup x:Name="CommonStates">
                     <VisualState x:Name="Normal" />
@@ -107,11 +112,8 @@
     <!--FileItem图片模板-->
     <ControlTemplate x:Key="VirImageTemplate" TargetType="a:FileItem">
         <Grid x:Name="RootGrid" Background="{TemplateBinding Background}">
-            <ToolTipService.ToolTip>
-                <TextBlock Text="{TemplateBinding ExtInfo}" FontSize="{StaticResource 小字号}"/>
-            </ToolTipService.ToolTip>
-            <TextBlock Text="图片" Foreground="{StaticResource 深灰边框}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <Image x:Name="Image" Source="{TemplateBinding Bitmap}" MaxHeight="180" MaxWidth="180" Stretch="Uniform"/>
+
+            <Image Source="{TemplateBinding Bitmap}" Margin="{Binding Owner.ItemPadding, RelativeSource={RelativeSource TemplatedParent}}" />
             <!--上传下载状态-->
             <Grid x:Name="ProgressGrid" Visibility="Collapsed" Background="{StaticResource 深暗遮罩}">
                 <Rectangle x:Name="ProgressRect" Width="{TemplateBinding ProgressWidth}" Height="4" Fill="Red" StrokeThickness="0" HorizontalAlignment="Left" VerticalAlignment="Top" IsHitTestVisible="False"/>
@@ -120,79 +122,6 @@
             </Grid>
             <!--分隔线-->
             <Border BorderBrush="{StaticResource 浅灰边框}" BorderThickness="0,0,0,1" IsHitTestVisible="False"/>
-
-            <VisualStateManager.VisualStateGroups>
-                <VisualStateGroup x:Name="CommonStates">
-                    <VisualState x:Name="Normal" />
-                    <VisualState x:Name="PointerOver" />
-                    <VisualState x:Name="Pressed" />
-                </VisualStateGroup>
-                <VisualStateGroup x:Name="VirFileStates">
-                    <VisualState x:Name="None" />
-                    <VisualState x:Name="UploadWaiting">
-                        <VisualState.Setters>
-                            <Setter Target="ProgressGrid.Visibility" Value="Visible" />
-                            <Setter Target="MsgBlock.Text" Value="等待上传..." />
-                        </VisualState.Setters>
-                    </VisualState>
-                    <VisualState x:Name="Uploading">
-                        <VisualState.Setters>
-                            <Setter Target="ProgressGrid.Visibility" Value="Visible" />
-                        </VisualState.Setters>
-                    </VisualState>
-                    <VisualState x:Name="Downloading">
-                        <VisualState.Setters>
-                            <Setter Target="ProgressGrid.Visibility" Value="Visible" />
-                        </VisualState.Setters>
-                    </VisualState>
-                </VisualStateGroup>
-            </VisualStateManager.VisualStateGroups>
-        </Grid>
-    </ControlTemplate>
-
-    <!--FileItem音频模板-->
-    <ControlTemplate x:Key="VirSoundTemplate" TargetType="a:FileItem">
-        <Grid x:Name="RootGrid" Background="{TemplateBinding Background}" MinWidth="260">
-            <Grid x:Name="ContentGrid" Padding="{TemplateBinding Padding}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Text="&#xE078;" Margin="0,0,10,0" FontFamily="{StaticResource IconFont}" FontSize="30" VerticalAlignment="Center"/>
-                <Grid Grid.Column="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{TemplateBinding FileDesc}" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis"/>
-                        <!--未读标志-->
-                        <Ellipse Visibility="{Binding Unread, Converter={StaticResource CvBoolToVisible}, RelativeSource={RelativeSource TemplatedParent}}"
-                                 Fill="Red"
-                                 Height="10"
-                                 Width="10"
-                                 Margin="2,0,0,0"
-                                 VerticalAlignment="Center"
-                                 HorizontalAlignment="Left" />
-                    </StackPanel>
-                    <TextBlock Text="{Binding Length, Converter={StaticResource CvFileLength}, RelativeSource={RelativeSource TemplatedParent}}" Style="{StaticResource VirFileNoteStyle}" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="1"/>
-                    <TextBlock Text="{TemplateBinding Uploader}" Style="{StaticResource VirFileNoteStyle}" Grid.Row="1"/>
-                    <TextBlock Text="{TemplateBinding Date}" Style="{StaticResource VirFileNoteStyle}" HorizontalAlignment="Right" Grid.Row="1" Grid.Column="1"/>
-                </Grid>
-            </Grid>
-            <ContentPresenter Content="{TemplateBinding MediaPlayer}" />
-            <!--上传下载状态-->
-            <Grid x:Name="ProgressGrid" Visibility="Collapsed" Background="{StaticResource 深暗遮罩}">
-                <Rectangle x:Name="ProgressRect" Width="{TemplateBinding ProgressWidth}" Height="4" Fill="Red" StrokeThickness="0" HorizontalAlignment="Left" VerticalAlignment="Top" IsHitTestVisible="False"/>
-                <TextBlock x:Name="MsgBlock" Text="{TemplateBinding Percent}" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                <TextBlock x:Name="NoteBlock" Text="点击可取消" Foreground="White" FontSize="{StaticResource 小字号}" Margin="0,0,10,6" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
-            </Grid>
-            <!--分隔线-->
-            <Border BorderBrush="{StaticResource 浅灰边框}" BorderThickness="0,0,0,1" IsHitTestVisible="False" />
 
             <VisualStateManager.VisualStateGroups>
                 <VisualStateGroup x:Name="CommonStates">
@@ -234,16 +163,20 @@
     <!--FileItem视频模板-->
     <ControlTemplate x:Key="VirVideoTemplate" TargetType="a:FileItem">
         <Grid x:Name="RootGrid" Background="{TemplateBinding Background}">
-            <ToolTipService.ToolTip>
-                <TextBlock Text="{TemplateBinding ExtInfo}" FontSize="{StaticResource 小字号}"/>
-            </ToolTipService.ToolTip>
-            <TextBlock Text="视频" Foreground="{StaticResource 深灰边框}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <Image x:Name="Image" Source="{TemplateBinding Bitmap}" MaxHeight="180" MaxWidth="180" Stretch="Uniform"/>
-            <Grid Width="60" Height="60" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Ellipse Stroke="White" StrokeThickness="2" IsHitTestVisible="False" />
-                <TextBlock Text="&#xE045;" Foreground="White" FontFamily="{StaticResource IconFont}" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <!--视频主流比例-->
+            <Grid Width="327"
+                  Height="184"
+                  Margin="{Binding Owner.ItemPadding, RelativeSource={RelativeSource TemplatedParent}}"
+                  Background="Black"
+                  VerticalAlignment="Center"
+                  HorizontalAlignment="Center">
+                <Image Source="{TemplateBinding Bitmap}" />
+                <Grid Width="60" Height="60" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <Ellipse Stroke="White" StrokeThickness="2" IsHitTestVisible="False" />
+                    <TextBlock x:Name="IconBlock" Text="&#xE045;" Foreground="White" FontFamily="{StaticResource IconFont}" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                </Grid>
+                <TextBlock Text="{TemplateBinding ExtInfo}" Foreground="White" Margin="0,0,0,20" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
             </Grid>
-            <ContentPresenter Content="{TemplateBinding MediaPlayer}" />
             <!--上传下载状态-->
             <Grid x:Name="ProgressGrid" Visibility="Collapsed" Background="{StaticResource 深暗遮罩}">
                 <Rectangle x:Name="ProgressRect" Width="{TemplateBinding ProgressWidth}" Height="4" Fill="Red" StrokeThickness="0" HorizontalAlignment="Left" VerticalAlignment="Top" IsHitTestVisible="False"/>
@@ -278,16 +211,15 @@
                         </VisualState.Setters>
                     </VisualState>
                 </VisualStateGroup>
+                <VisualStateGroup x:Name="CachedStates">
+                    <VisualState x:Name="NoCache" />
+                    <VisualState x:Name="Cached">
+                        <VisualState.Setters>
+                            <Setter Target="IconBlock.Foreground" Value="{StaticResource 主题蓝色}" />
+                        </VisualState.Setters>
+                    </VisualState>
+                </VisualStateGroup>
             </VisualStateManager.VisualStateGroups>
         </Grid>
     </ControlTemplate>
-
-    <!--FileItem-->
-    <Style TargetType="a:FileItem">
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Padding" Value="10,6,10,6"/>
-        <Setter Property="HorizontalAlignment" Value="Stretch"/>
-        <Setter Property="VerticalAlignment" Value="Top"/>
-        <Setter Property="Template" Value="{StaticResource VirFileTemplate}" />
-    </Style>
 </ResourceDictionary>
