--- a/Client/Dt.Base/Themes/Styles/FormView.xaml
+++ b/Client/Dt.Base/Themes/Styles/FormView.xaml
@@ -246,25 +246,23 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="a:CFile">
-                    <Grid x:Name="RootGrid" Background="White" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1" Margin="0,0,-1,-1">
+                    <Grid x:Name="RootGrid" Background="White">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
-                        <Grid BorderBrush="{TemplateBinding BorderBrush}"
-                              BorderThickness="0,0,0,1"
-                              Margin="0,0,0,-1"
-                              Background="{TemplateBinding Background}"
-                              Height="{StaticResource RowOuterHeight}">
+                        <Grid Background="{TemplateBinding Background}" Height="{StaticResource RowOuterHeight}">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
+                            <Rectangle Stroke="{TemplateBinding BorderBrush}" Margin="0,0,-1,-1" IsHitTestVisible="False" Grid.ColumnSpan="2" />
                             <TextBlock Text="{TemplateBinding Title}" Margin="10,0,0,0" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" />
                             <StackPanel Orientation="Horizontal" Grid.Column="1">
                                 <Button Content="&#xE080;" Style="{StaticResource 字符按钮}" />
                             </StackPanel>
                         </Grid>
+                        <Rectangle Stroke="{TemplateBinding BorderBrush}" Margin="0,0,-1,-1" IsHitTestVisible="False" Grid.RowSpan="2" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
