--- a/Client/Dt.Base/Themes/Styles/FileList.xaml
+++ b/Client/Dt.Base/Themes/Styles/FileList.xaml
@@ -111,7 +111,7 @@
     <!--FileItem图片模板-->
     <ControlTemplate x:Key="VirImageTemplate" TargetType="a:FileItem">
         <Grid x:Name="RootGrid" Background="{TemplateBinding Background}">
-
+            <TextBlock Text="&#xE054;" Foreground="{StaticResource 深灰边框}" FontFamily="{StaticResource IconFont}" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center" />
             <Image Source="{TemplateBinding Bitmap}" Margin="{Binding Owner.ImagePadding, RelativeSource={RelativeSource TemplatedParent}}" />
             <!--上传下载状态-->
             <Grid x:Name="ProgressGrid" Visibility="Collapsed" Background="{StaticResource 深暗遮罩}">
@@ -162,7 +162,7 @@
     <ControlTemplate x:Key="VirVideoTemplate" TargetType="a:FileItem">
         <Grid x:Name="RootGrid" Background="{TemplateBinding Background}">
             <!--视频主流比例-->
-            <Grid Width="327" Height="184" Background="Black" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Grid x:Name="PlayerGrid" Width="327" Height="184" Margin="{Binding Owner.VideoPadding, RelativeSource={RelativeSource TemplatedParent}}" Background="Black" VerticalAlignment="Center" HorizontalAlignment="Center">
                 <Image Source="{TemplateBinding Bitmap}" />
                 <Grid Width="60" Height="60" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <Ellipse Stroke="White" StrokeThickness="2" IsHitTestVisible="False" />
