--- a/Client/Dt.Base/Themes/Styles/FormView.xaml
+++ b/Client/Dt.Base/Themes/Styles/FormView.xaml
@@ -221,7 +221,8 @@
                 <ControlTemplate TargetType="a:CImage">
                     <fv:CellPanel x:Name="Panel" Background="{TemplateBinding Background}">
                         <Grid x:Name="Grid" Background="Transparent">
-                            <Button Content="&#xE080;"
+                            <Button x:Name="BtnAdd"
+                                    Content="&#xE080;"
                                     Style="{StaticResource 字符按钮}"
                                     HorizontalAlignment="Center"
                                     Visibility="{Binding ReadOnlyBinding,Converter={StaticResource CvBoolToCollapsed},RelativeSource={RelativeSource TemplatedParent}}" />
