--- a/Client/Dt.Sample/FormView/FileCellDemo.xaml
+++ b/Client/Dt.Sample/FormView/FileCellDemo.xaml
@@ -12,7 +12,17 @@
                     <a:CFile ID="file0" Title="无文件" />
                     <a:CText ID="txt" Title="文本框" />
                     <a:CFile ID="file1" Title="单个文件" />
-                    <a:CFile ID="file2" Title="多文件" />
+                    <a:CFile ID="file2" Title="多文件">
+                        <a:CFile.Toolbar>
+                            <Button Content="自定义" />
+                        </a:CFile.Toolbar>
+                        <a:Ex.Menu>
+                            <a:Menu>
+                                <a:Mi ID="下载" Icon="向下" Cmd="{Binding CmdDownload}" />
+                                <a:Mi ID="打开" Icon="打开" Cmd="{Binding CmdOpen}" />
+                            </a:Menu>
+                        </a:Ex.Menu>
+                    </a:CFile>
                     <a:CFile ID="file3" Title="多类型文件" />
                     <a:CFile ID="file4" Title="多图像" ImageHeight="0" ImagePadding="0" ColCount="2" />
                     <a:CBar Title="图像格" />
