--- a/Client/Dt.Sample/FormView/FileCellDemo.xaml
+++ b/Client/Dt.Sample/FormView/FileCellDemo.xaml
@@ -12,9 +12,16 @@
                     <a:CFile ID="file0" Title="无文件" />
                     <a:CText ID="txt" Title="文本框" />
                     <a:CFile ID="file1" Title="单个文件" />
-                    <a:CFile ID="file2" Title="多文件">
+                    <a:CFile ID="file2" Title="多文件" Changed="OnChanged">
                         <a:CFile.Toolbar>
-                            <Button Content="自定义" />
+                            <StackPanel Orientation="Horizontal">
+                                <Button Content="图片" Command="{Binding CmdAddImage}" />
+                                <Button Content="视频" Command="{Binding CmdAddVideo}" />
+                                <Button Content="音频" Command="{Binding CmdAddAudio}" />
+                                <Button Content="录音" Command="{Binding CmdCaptureVoice}" />
+                                <Button Content="拍照" Command="{Binding CmdTakePhoto}" />
+                                <Button Content="视频" Command="{Binding CmdRecordVideo}" />
+                            </StackPanel>
                         </a:CFile.Toolbar>
                         <a:Ex.Menu>
                             <a:Menu>
@@ -28,6 +35,14 @@
                     <a:CBar Title="图像格" />
                     <a:CImage ID="img1" Title="图像" />
                     <a:CImage ID="img2" Title="无图像" />
+                    <a:CImage ID="img3" Title="自定义菜单">
+                        <a:Ex.Menu>
+                            <a:Menu>
+                                <a:Mi ID="下载" Icon="向下" Cmd="{Binding CmdDownload}" />
+                                <a:Mi ID="打开" Icon="打开" Cmd="{Binding CmdOpen}" />
+                            </a:Menu>
+                        </a:Ex.Menu>
+                    </a:CImage>
                 </a:Fv>
             </a:Tab>
         </a:Tabs>
